--- a/content/resources/17-037s04-th.md
+++ b/content/resources/17-037s04-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/17-037-american-political-thought-spring-2004/624034c00c1b36682ff8578178d2fdc3_17-037s04-th.jpg
+file: /courses/17-037-american-political-thought-spring-2004/624034c00c1b36682ff8578178d2fdc3_17-037s04-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "Vote to Impeach Andrew Johnson.\_(Image courtesy of the [Library of Congress](http://www.loc.gov).)"
@@ -13,3 +13,5 @@ resourcetype: Image
 title: 17-037s04-th.jpg
 uid: 624034c0-0c1b-3668-2ff8-578178d2fdc3
 ---
+New image Upload
+
