--- a/content/resources/17-037s04-th.md
+++ b/content/resources/17-037s04-th.md
@@ -8,10 +8,10 @@ image_metadata:
   credit: ''
   image-alt: Engraving of senators gathered to impeach Andrew Johnson.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 17-037s04-th.jpg
 uid: 624034c0-0c1b-3668-2ff8-578178d2fdc3
 ---
 New image Upload
-
