Sync all content

--- a/content/resources/17-037s04-th.md
+++ b/content/resources/17-037s04-th.md
@@ -1,7 +1,8 @@
 ---
 content_type: resource
 description: New image Upload
-file: /courses/17-037-american-political-thought-spring-2004/624034c00c1b36682ff8578178d2fdc3_17-037s04-th.jpg
+file: /ol-ocw-studio-app/courses/17-037-american-political-thought-spring-2004/624034c00c1b36682ff8578178d2fdc3_17-037s04-th.jpg
+file_size: 8938
 file_type: image/jpeg
 image_metadata:
   caption: "Vote to Impeach Andrew Johnson.\_(Image courtesy of the [Library of Congress](http://www.loc.gov).)"
