--- a/content/resources/17-037s04.md
+++ b/content/resources/17-037s04.md
@@ -1,7 +1,8 @@
 ---
 content_type: resource
 description: ''
-file: /courses/17-037-american-political-thought-spring-2004/77a60503cc3d69685c7b0f77b3080943_17-037s04.jpg
+file: /ol-ocw-studio-app/courses/17-037-american-political-thought-spring-2004/77a60503cc3d69685c7b0f77b3080943_17-037s04.jpg
+file_size: 111475
 file_type: image/jpeg
 image_metadata:
   caption: "Vote to Impeach Andrew Johnson.\_(Image courtesy of the [Library of Congress](http://www.loc.gov).)"
