Sync all content

--- a/content/resources/17-037s04.md
+++ b/content/resources/17-037s04.md
@@ -5,8 +5,7 @@ file: /ol-ocw-studio-app/courses/17-037-american-political-thought-spring-2004/7
 file_size: 111475
 file_type: image/jpeg
 image_metadata:
-  caption: "Vote to Impeach Andrew Johnson.\_(Image courtesy of the {{% resource_link\
-    \ \"bc43424a-0d5b-4b1a-9a93-89cbb861d61f\" \"Library of Congress\" %}}.)"
+  caption: "Vote to Impeach Andrew Johnson.\_(Image courtesy of the [Library of Congress](http://www.loc.gov).)"
   credit: ''
   image-alt: Engraving of senators gathered to impeach Andrew Johnson.
 learning_resource_types: []
